set(HEADERS
    Animation.h
    AnimationState.h
    AnimationTrack.h
    AxisAlignedBox.h
    Camera.h
    Effect.h
    EffectManager.h
    Engine.h
    Entity.h
    EventListener.h
    Export.h
    FrameListener.h
    FreeType.h
    Frustum.h
    KeyFrame.h
    math_3d.h
    Mesh.h
    MeshManager.h
    MoveableObject.h
    Node.h
    OctreeCamera.h
    Octree.h
    OctreeNode.h
    OctreeRaySceneQuery.h
    OctreeSceneManager.h
    ParticleEffect.h
    ParticleSystem.h
    Plane.h
    Ray.h
    RaySceneQuery.h
    Renderable.h
    Render.h
    RenderWindow.h
    RotationalSpline.h
    SceneManager.h
    SceneNode.h
    SimpleMeshEffect.h
    SimpleSpline.h
    Singleton.h
    SkeletonAnimation.h
    SkeletonBone.h
    Skeleton.h
    SkeletonNodeTrack.h
    SubMesh.h
    Texture.h
    Timer.h
    util.h
    )
#install(FILES ${HEADERS} DESTINATION include/3dengine)
